--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.jpa.hibernate.ddl-auto = create
-spring.datasource.url = jdbc:mysql://localhost:3306/dbPontoEletronico
+#Mysql
+spring.jpa.hibernate.ddl-auto = none
+spring.datasource.url = jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username = root
 spring.datasource.password = toyotaeenaruguto
 paginacao.qtd_por_pagina= 25
+
+#exibe os comandos Sql
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
